# bot-swbox

./: .gitignore  .ignore  Cargo.toml  README.md  Shuttle.toml  bot.py  lib.py  monsters_catalog.json  privacy-policy.md  requirements.txt  terms-of-services.md
.github/workflows/: ci-deploy.yml  deploy-pi.yml  deploy.yml  lint.yml
archived_commands/duo_stats/: get_duo_stats.rs  mod.rs  modal.rs
archived_commands/how_to_build/: how_to_build.rs  models.rs  utils.rs
archived_commands/register/: mod.rs  utils.rs
assets/avg_runes/: average_monster_stats.json
cogs/: commands_cog.py
src/: main.rs
src/commands/: embed_error_handling.rs  mod.rs
src/commands/best_pve_teams/: best_pve_teams.rs  command.rs  mod.rs  models.rs  utils.rs
src/commands/claim_membership/: claim_membership.rs  mod.rs  modal.rs  utils.rs
src/commands/duo_stats/: get_duo_stats.rs  mod.rs  modal.rs  utils.rs
src/commands/help/: builder.rs  command.rs  handler.rs  help.rs  lib.rs  mod.rs  service.rs
src/commands/how_to_build/: command.rs  how_to_build.rs  mod.rs  models.rs  utils.rs
src/commands/json/: coeffs.json  mod.rs  process_json.rs  rune.rs  runes  upload_json.rs
src/commands/leaderboard/: command.rs  get_leaderboard.rs  mod.rs  utils.rs
src/commands/meta/: command.rs  meta.rs  mod.rs  utils.rs
src/commands/mob_stats/: command.rs  get_mob_stats.rs  get_mob_stats_utils.rs  lib.rs  mod.rs  modal.rs  models.rs  utils.rs
src/commands/mobstats/: mobstats.rs  mod.rs
src/commands/mystats/: command.rs  mod.rs  mystats.rs
src/commands/player_names/: command.rs  mod.rs  modal.rs  models.rs  track_player_names.rs  utils.rs
src/commands/player_stats/: command.rs  get_player_stats.rs  mod.rs  utils.rs
src/commands/ranks/: command.rs  get_ranks.rs  get_ranks_utils.rs  lib.rs  mod.rs  ranks.rs  utils.rs
src/commands/register/: command.rs  mod.rs  register.rs  unregister.rs  utils.rs
src/commands/replays/: command.rs  get_replays.rs  mod.rs  models.rs  utils.rs
src/commands/rta_core/: cache.rs  command.rs  dryrun.rs  get_rta_core.rs  mod.rs  models.rs  utils.rs
src/commands/services/: command.rs  services.rs
src/commands/shared/: clients.rs  command_tracker.rs  coupons.rs  embed_error_handling.rs  logs.rs  mod.rs  models.rs  player_alias.json  player_alias.rs  utils.rs
src/commands/suggestion/: command.rs  mod.rs  modal.rs  send_suggestion.rs
src/commands/support/: command.rs  mod.rs  support.rs
src/commands/trackswarena/: mod.rs
test-project/: Cargo.toml  artifacts.json
test-project/src/: main.rs
(+10 files in other folders)
