[package]
name = "shuttle-bot-swbox-rust"
version = "0.2.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.98"
poise = "0.6.1"
shuttle-runtime = { version = "0.56.0", features = ["setup-otel-exporter"] }
shuttle-serenity = "0.56.0"
tokio = "1.47.1"
log = "0.4.27"
reqwest = { version = "0.12.22", features = ["json", "blocking", "rustls-tls", "cookies"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
lazy_static = "1.5.0"
chrono = "0.4.41"
image = "0.25.6"
futures = "0.3.31"
mongodb = "3.2.4"
md5 = "0.8.0"
urlencoding = "2.1.3"
rand = "0.9.2"
imageproc = "0.25.0"
rusttype = "0.9.3"
ab_glyph = "0.2.31"
once_cell = "1.21.3"
moka = { version = "0.12.10", features = ["future"] }
scraper = "0.23.1"
regex = "1.10.5"