[package]
name = "shuttle-bot-swbox-rust"
version = "0.2.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.100"
poise = "0.6.1"
serenity = { version = "0.12.4", default-features = false, features = ["client", "gateway", "rustls_backend"] }
tokio = "1.48.0"
log = "0.4.29"
reqwest = { version = "0.12.26", default-features = false, features = ["json", "blocking", "cookies", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
lazy_static = "1.5.0"
chrono = "0.4.42"
image = "0.25.9"
futures = "0.3.31"
mongodb = "3.4.1"
md5 = "0.8.0"
urlencoding = "2.1.3"
rand = "0.9.2"
imageproc = "0.25.0"
rusttype = "0.9.3"
ab_glyph = "0.2.32"
once_cell = "1.21.3"
moka = { version = "0.12.11", features = ["future"] }
scraper = "0.25.0"
regex = "1.12.2"
dotenvy = "0.15.7"